--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express": "^4.18.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.1",
+    "pre-commit": "^1.2.2",
     "socket.io": "^4.7.5",
     "zod": "^3.22.4"
   }
