--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/app.ts",
-    "build": "tsc",
-    "dev": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/app.ts"
+    "build": "rimraf dist && tsc",
+    "ts.check": "tsc --project tsconfig.json",
+    "add-build": "git add dist",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
@@ -29,6 +31,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.1",
     "pre-commit": "^1.2.2",
+    "rimraf": "^5.0.5",
     "socket.io": "^4.7.5",
     "zod": "^3.22.4"
   }
